# animus-ai

./: .gitignore  ANIMUS_Documentation.docx  ANIMUS_Documentation_v2.docx  ANIMUS_Documentation_v3.docx  ANIMUS_STATUS.md  Cargo.toml  Interaccion Grok.txt  README.md  ROM_NOTICE.txt  animus_corpus.json  animus_graph.dot  animus_web.py  canales.txt  conscious_agent_v16.py  dios_silicio.txt  exportar_corpus.py  fetcher_autonomo.py  generar_instancia.py  jugar_manual.py  kraken_fed.txt  main.rs  main_new.rs  memoria_ejemplo.json  process_book.py  process_youtube.py  realidad_viva.txt  temas.txt  voz.txt  web_cache.json  youtube_cookies.txt
Documentacion/: comandos importantes.txt
Documentos/: ANIMUS_Sesion_09Mar2026.docx
instancias/: memoria_animus_fin.json  memoria_animus_gov.json  memoria_animus_tech.json  nacimiento_animus_fin.md  nacimiento_animus_gov.md  nacimiento_animus_tech.md
python_scripts/: animus_auditor.py  animus_business.py  animus_coder.py  animus_executor.py  animus_faucet.py  animus_hunter.py  animus_journal.py  animus_mutator.py  animus_recovery.py  animus_sandbox.py  animus_self_portrait.py  animus_surgeon.py  animus_surgeon_d21.py  animus_surgeon_v2.py  arquitecto.py  arquitecto_v2.py  autonomous_loop.py  bernard.py  bilingual_tracker.py  conscious_agent_v16.py  dialogo.py  distincion_auto.py  feedback_loops.py  frecuencia_es.py  fuente_classifier.py  jugar_manual.py  orphan_activator.py  process_book_en.py  process_book_v2.py  rebalancear_animus.py  reporte_autoconciencia.py  resistencia.py  sincronicidad.py  tareas.py  temporal_decay.py  (+2 more)
(+11 files in other folders)
