[package]
name = "animus_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full", "time"] }
clap = { version = "4.5", features = ["derive"] }
rust-stemmers = "1.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.20"
sysinfo = "0.31"
rayon = "1.10"